Fixed alignment issues for tweet header

--- a/src/sections/profile-section/styling/Tweet.module.css
+++ b/src/sections/profile-section/styling/Tweet.module.css
@@ -27,6 +27,7 @@
 .tweetHeader {
   margin-top: 10px;
   display: flex;
+  align-items: center;
 }
 
 .publishTime {
